--- a/College.html
+++ b/College.html
@@ -58,5 +58,38 @@
 			towards my KPE degree so I figured I'd just finish that up slowly over the next couple years 
 			as I worked towards my Accounting degree.  My hopes are to get my CPA license and then work my
 			way up to a CFO by my early- to mid-30s.</p>
+			
+		<table style="width:33%">
+			<tr>
+				<th colspan="3">Spring 2017 Schedule</th>
+			</tr>
+			<tr>
+				<td> BUA 101 </td>
+				<td> TuTh </td>
+				<td> 12:30pm </td>
+			</tr>
+			<tr>
+				<td> BUA 202 </td>
+				<td> TuTh </td>
+				<td> 2:00pm </td>
+			</tr>
+			<tr>
+				<td> BUA 235 </td>
+				<td> TuTh </td>
+				<td> 9:30am </td>
+			</tr>
+			<tr>
+				<td> BUA 270 </td>
+				<td> MWF </td>
+				<td> 1:00pm </td>
+			</tr>
+			<tr>
+				<td> BUA 325 </td>
+				<td> TuTh </td>
+				<td> 8:00am </td>
+			</tr>
+		</table>
+		
 	</body>
 </html>
+
