--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<body>
 		<div id="Cover" style="background-color:lightblue;color:black;padding:20px;">
 			<H1> 
-				<img src="prof.jpg" align="middle"> 
+				<img src="Prof.jpg" align="middle"> 
 				Nicholas J. M. W. Lunn 
 			</H1>
 			<nav>
