--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id="leftcolumn">
 			<nav>
 				<UL>
-					<LI><A HREF="Lab1.html"> Home </A></LI>
+					<LI><A HREF="index.html"> Home </A></LI>
 					<LI><A HREF="College.html"> College </A></LI>
 					<LI><A HREF="SigEp.html"> SigEp </A></LI>
 					<LI><A HREF="Live Music.html"> Live Music </A></LI>
