--- a/Sports.html
+++ b/Sports.html
@@ -44,6 +44,10 @@
 			to build friendships on the court.  When I joined SigEp, I was put on their A basketball team and
 			we continue to be one of the top teams in the Fraternity League.</p>
 		
+		<video width="320" height="240" autoplay>
+			<source src="dunk.mp4" type="video/mp4">
+		</video>
+		
 		<br></br>
 		<br></br>
 		
