--- a/Sports.html
+++ b/Sports.html
@@ -42,9 +42,10 @@
 			but lost in overtime.</P>
 			<p> In college, I made most of my friends on the basketball court my first semester and continue
 			to build friendships on the court.  When I joined SigEp, I was put on their A basketball team and
-			we continue to be one of the top teams in the Fraternity League.</p>
-		
-		<video width="320" height="240" autoplay>
+			we continue to be one of the top teams in the Fraternity League, just winning the 2017 Championship
+			against Pi Kappa Phi in double overtime.</p>
+		<IMG SRC="championship.jpg">
+		<video width="600" height="450" autoplay>
 			<source src="dunk.mp4" type="video/mp4">
 		</video>
 		
