--- a/index.html
+++ b/index.html
@@ -28,21 +28,29 @@
 	
 	<body>
 		<div id="Cover" style="background-color:lightblue;color:black;padding:20px;">
-			<H1> 
-				<img src="Prof.jpg" align="middle"> 
-				Nicholas J. M. W. Lunn 
-			</H1>
-			<nav>
-				<UL>
-					<LI><a href="http://runningwithgsus.blogspot.com/" target="_blank">Blogspot</a></LI>
-					<LI><a href="https://www.instagram.com/nickjlunn/" target="_blank">Instagram</a></LI>
-					<LI><a href="https://www.linkedin.com/in/nicholas-lunn" target="_blank">LinkedIn</a></LI>
-					<LI><a href="https://soundcloud.com/user-248718590">Sound Cloud</a></LI>
-				</UL>
-			</nav>
+			<div id="LeftCover" style="10px;">
+				<H1> 
+					<img src="Prof.jpg" align="middle"> 
+				</H1>
+			</div>	
+			
+			<div id="RightCover" style="10px;">
+				<br><br>
+				<H1>
+					Nicholas J. M. W. Lunn 
+				</H1>
+				<nav>
+					<UL>
+						<LI><a href="http://runningwithgsus.blogspot.com/" target="_blank">Blogspot</a></LI>
+						<LI><a href="https://www.instagram.com/nickjlunn/" target="_blank">Instagram</a></LI>
+						<LI><a href="https://www.linkedin.com/in/nicholas-lunn" target="_blank">LinkedIn</a></LI>
+						<LI><a href="https://soundcloud.com/user-248718590">Sound Cloud</a></LI>
+					</UL>
+				</nav>
+			</div>
 		</div>
 		
-		<br></br>
+		<br>
 		
 		<div id="maincontainer2">
 			<div id="leftcolumn2" style="10px;">
@@ -62,7 +70,7 @@
 			</div>
 		</div>
 		
-		<br></br>
+		<br>
 		
 	</body>
 </html>
