--- a/Live Music.html
+++ b/Live Music.html
@@ -41,20 +41,21 @@
 			</nav>
 		</div>
 		
-		<br></br>
-		<p>This past fall I had an opportunity to start performing live music at local restaurant, The Family Dog, in downtown
-		Orono.  I performed Saturdays from 11-2pm and I played popular radio music on guitar, ukulele, and with one
-		song just my vocals using a loop pedal which was always fun to do and received positive reviews. </P>
-		<p>During the winter I've taken a break due to slower business, but my hopes are once warmer weather rolls in (most likely
-		not until August or something like that cause #Maine) that I'll start up doing Live Music again because that is a rather
-		good source of income on the weekends.</p>
-		<p> I also have for the past 3-4 years been a Worship leader a variety of Baptist Churches, namely my home church of Hodgdon United 
-		Baptist Church, Crosspoint Church (formerly Bangor Baptist Church), and my fiance's church Head of the River Baptist Church
-		in Cutler, Maine.  I lead using guitars, piano, bass, and vocals.  For worship songs we normally do not use the traditional hymns
-		but instead do contemporary Christian music that are sometimes readapated Hymns with a new "popier" melody.  Artists such as
-		Chris Tomlin and Hillsong Worship are common sources for worship songs in most churches with songs like "Cornerstone", "Oceans",
-		"At the Cross", and "Our God".
-	
+		<div id="leftcolumn3">
+			<br>
+			<p>This past fall I had an opportunity to start performing live music at local restaurant, The Family Dog, in downtown
+			Orono.  I performed Saturdays from 11-2pm and I played popular radio music on guitar, ukulele, and with one
+			song just my vocals using a loop pedal which was always fun to do and received positive reviews. </P>
+			<p>During the winter I've taken a break due to slower business, but my hopes are once warmer weather rolls in (most likely
+			not until August or something like that cause #Maine) that I'll start up doing Live Music again because that is a rather
+			good source of income on the weekends.</p>
+			<p> I also have for the past 3-4 years been a Worship leader a variety of Baptist Churches, namely my home church of Hodgdon United 
+			Baptist Church, Crosspoint Church (formerly Bangor Baptist Church), and my fiance's church Head of the River Baptist Church
+			in Cutler, Maine.  I lead using guitars, piano, bass, and vocals.  For worship songs we normally do not use the traditional hymns
+			but instead do contemporary Christian music that are sometimes readapated Hymns with a new "popier" melody.  Artists such as
+			Chris Tomlin and Hillsong Worship are common sources for worship songs in most churches with songs like "Cornerstone", "Oceans",
+			"At the Cross", and "Our God".
+		</div>
 	</body>
 	
 </html>
