--- a/Live Music.html
+++ b/Live Music.html
@@ -41,6 +41,8 @@
 			</nav>
 		</div>
 		
+		<iframe width="67%" height="100px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/306603185&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+		
 		<div id="leftcolumn3">
 			<br>
 			<p>This past fall I had an opportunity to start performing live music at local restaurant, The Family Dog, in downtown
