--- a/Live Music.html
+++ b/Live Music.html
@@ -41,10 +41,10 @@
 			</nav>
 		</div>
 		
-		<iframe width="67%" height="100px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/306603185&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+		<div id="element-align">	
+			<iframe width="auto" height="100px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/306603185&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+		</div>
 		
-		<div id="leftcolumn3">
-			<br>
 			<p>This past fall I had an opportunity to start performing live music at local restaurant, The Family Dog, in downtown
 			Orono.  I performed Saturdays from 11-2pm and I played popular radio music on guitar, ukulele, and with one
 			song just my vocals using a loop pedal which was always fun to do and received positive reviews. </P>
@@ -57,7 +57,9 @@
 			but instead do contemporary Christian music that are sometimes readapated Hymns with a new "popier" melody.  Artists such as
 			Chris Tomlin and Hillsong Worship are common sources for worship songs in most churches with songs like "Cornerstone", "Oceans",
 			"At the Cross", and "Our God".
-		</div>
+
+			<br><br><br><br><br><br><br><br>
+			
 	</body>
 	
 </html>
