--- a/Sports.html
+++ b/Sports.html
@@ -45,7 +45,7 @@
 			we continue to be one of the top teams in the Fraternity League, just winning the 2017 Championship
 			against Pi Kappa Phi in double overtime.</p>
 		<IMG SRC="championship.jpg">
-		<video width="600" height="450" autoplay>
+		<video width="600" height="450" controls>
 			<source src="dunk.mp4" type="video/mp4">
 		</video>
 		
