--- a/College.html
+++ b/College.html
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div id="rightcolumn">
-			<p style="font-size: 200%"><b>BUA 235- Joe Clark</b></p>
+			<p style="font-size: 200%"><b>BUA 235- Nick Lunn</b></p>
 		</div>
 	</div>
 	
