--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 		
 		<div id="rightcolumn">
-			<p style="font-size: 200%"><b>BUA 235- Joe Clark</b></p>
+			<p style="font-size: 200%"><b>BUA 235- Nick Lunn</b></p>
 		</div>
 	</div>
 	
